--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ SHOW_SQL=False
 # -  database
 DB_HOST=127.0.0.1
 DB_PORT=5442
-DB_USER=dev
-DB_PASSWORD=dev
-DB_NAME=postgres
+DB_USER=myuser
+DB_PASSWORD=mypassword
+DB_NAME=mydatabase
 
 
